@@ -6,6 +6,7 @@
 - Add a code field type (requires Ace editor) for things like custom CSS or other markup [#144]
 - Add an email field type which validates the value to be an email address [#65]
 - Include OnHandleRequest plugin event (alongside OnMODXInit), to make ClientConfig play nicer with various context routing and other solutions that don't use OnMODXInit [#140]
+- Add separate "Save" and "Save and close" buttons to the setting window [#135]
 
 ClientConfig 2.2.0-pl
 ---------------------
